# RobotCompetition

./: README.md
blue_team_control/: CMakeLists.txt  package.xml
blue_team_control/launch/: players.launch
blue_team_control/src/: player.cpp
competbot_description/: CMakeLists.txt  package.xml
competbot_description/launch/: view_model.launch
competbot_description/rviz/: model.rviz
competbot_description/urdf/: colors.urdf.xacro  competbot_blue.xacro  competbot_red.xacro  gazebo_plugins.urdf.xacro  settings.urdf.xacro  structures.urdf.xacro  wheel.urdf.xacro
competbot_gazebo/: CMakeLists.txt  README.md  package.xml  spawn.sh
competbot_gazebo/launch/: empty_world.launch  spawn_blue_robot.launch  spawn_red_robot.launch  spawn_robot.launch
competbot_gazebo/src/: move_test.cpp
robot_competition_manager/: CMakeLists.txt  package.xml
robot_competition_manager/config/: data.yaml
robot_competition_manager/launch/: blue_team.launch  competition.launch  red_team.launch
robot_competition_manager/src/: camera_controller.cpp  main.cpp  poses_compute.cpp
robot_competition_msgs/: CMakeLists.txt  package.xml
robot_competition_msgs/srv/: registry.srv
robot_competition_scene/: CMakeLists.txt  README.md  package.xml
robot_competition_scene/launch/: game_field.launch  spawn_camera.launch
robot_competition_scene/rviz/: game_field.rviz
robot_competition_scene/urdf/: camera.xacro
robot_competition_scene/urdf/sensors/: xtion_pro_live.gazebo.xacro  xtion_pro_live.urdf.xacro
robot_competition_scene/worlds/: game_field.world
