<?xml version="1.0"?>
<package format="2">
  
  <name>blue_team_control</name>
  <version>0.0.0</version>
  <description>The blue_team_control package</description>

  <maintainer email="carlos2caminero@gmail.com">Carlosalpha1</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>robot_competition_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>robot_competition_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>robot_competition_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
  </export>

</package>
