<?xml version="1.0"?>
<package format="2">
  <name>robot_competition_scene</name>
  <version>0.0.0</version>
  <description>The robot_competition_scene package</description>

  <maintainer email="carlos2caminero@gmail.com">Carlosalpha1</maintainer>

  <license>GPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
